do not enforce allowlist on admin role

--- a/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
+++ b/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
@@ -1,6 +1,8 @@
 description: GraphQL query which is not in allowlist
 url: /v1alpha1/graphql
 status: 400
+headers:
+  X-Hasura-Role: user
 response:
   errors:
   - extensions:
