--- a/server/tests-py/queries/graphql_query/allowlist/query_user.yaml
+++ b/server/tests-py/queries/graphql_query/allowlist/query_user.yaml
@@ -1,6 +1,8 @@
 description: Query data from user table
 url: /v1alpha1/graphql
 status: 200
+headers:
+  X-Hasura-Role: user
 response:
   data:
     user:
