--- a/community/learn/graphql-tutorials/tutorials/react-native-apollo/app-final/package.json
+++ b/community/learn/graphql-tutorials/tutorials/react-native-apollo/app-final/package.json
@@ -18,7 +18,7 @@
     "apollo-boost": "^0.3.1",
     "apollo-link-ws": "^1.0.17",
     "apollo-utilities": "^1.2.1",
-    "expo": "^32.0.0",
+    "expo": "32.0.0",
     "graphql": "^14.2.1",
     "jwt-decode": "^2.2.0",
     "react": "16.5.0",
