wip: static console assets

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -111,6 +111,7 @@ library
                      , insert-ordered-containers
 
                      -- Parsing SemVer
+                     , salve
                      , semver
 
                      -- Templating
