--- a/community/learn/graphql-tutorials/tutorials/react-native-apollo/app-final/.eslintrc
+++ b/community/learn/graphql-tutorials/tutorials/react-native-apollo/app-final/.eslintrc
@@ -20,6 +20,7 @@
     "rules": {
         "react/prop-types": "off",
         "react/display-name": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "no-useless-escape": "off"
     }
 }
