--- a/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
+++ b/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
@@ -1,6 +1,6 @@
 description: GraphQL query which is not in allowlist
-url: /v1alpha1/graphql
-status: 400
+url: /v1/graphql
+status: 200
 headers:
   X-Hasura-Role: user
 response:
