update manifests, config

--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -11,11 +11,19 @@ data:
       }
 
       redir 301 {
+        /graphql/react-native/boilerplate.zip https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/react-native-boilerplate/boilerplate.zip
+      }
+
+      redir 301 {
         /graphql/vue/boilerplate.zip https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/vue-boilerplate/boilerplate.zip
       }
 
       redir 301 {
         /graphql/react/ /graphql/react/introduction
+      }
+
+      redir 301 {
+        /graphql/react-native/ /graphql/react-native/introduction
       }
 
       redir 301 {
@@ -65,6 +73,8 @@ data:
       proxy /graphql/hasura hasura-backend
 
       proxy /graphql/react react-apollo
+
+      proxy /graphql/react-native react-native-apollo
 
       proxy /graphql/vue vue-apollo
       
