--- a/console/package.json
+++ b/console/package.json
@@ -60,6 +60,7 @@
     "graphiql-explorer-hasura": "0.0.7",
     "graphql": "^14.0.2",
     "hasura-console-graphiql": "0.0.10",
+    "graphql-voyager": "^1.0.0-rc.27",
     "history": "^3.0.0",
     "hoist-non-react-statics": "^1.0.3",
     "inflection": "^1.12.0",
@@ -132,6 +133,7 @@
     "bootstrap-sass": "^3.3.7",
     "clean-webpack-plugin": "^0.1.17",
     "concurrently": "^3.5.0",
+    "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^0.28.11",
     "cypress": "^3.2.0",
     "dotenv": "^5.0.1",
