--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -26,12 +26,7 @@ data:
         /graphql/hasura/ /graphql/hasura/introduction
       }
 
-      redir 302 {
-        if {path} is /
-        / /graphql/react/introduction
-      }
-
-      # proxy / homepage
+      proxy / homepage
 
       proxy /auth/webhook auth-webhook {
         without /auth
