--- a/community/learn/graphql-tutorials/backend-services/auth-webhook/Dockerfile
+++ b/community/learn/graphql-tutorials/backend-services/auth-webhook/Dockerfile
@@ -6,13 +6,13 @@ RUN chown node:node /opt/app
 
 WORKDIR /opt/app
 
-COPY --chown=node:node package.json .
+COPY package.json .
 
 USER node
 
 RUN npm install
 
-COPY --chown=node:node . .
+COPY . .
 
 RUN curl https://graphql-tutorials.auth0.com/pem > graphql-tutorials.pem
 
