--- a/community/learn/graphql-tutorials/manifests/graphiql.yaml
+++ b/community/learn/graphql-tutorials/manifests/graphiql.yaml
@@ -31,6 +31,10 @@ spec:
         ports:
         - containerPort: 8080
           protocol: TCP
+        readinessProbe:
+          httpGet:
+            path: /graphql/graphiql
+            port: 8080
 ---
 apiVersion: v1
 kind: Service
