--- a/community/learn/graphql-tutorials/manifests/hasura-backend.yaml
+++ b/community/learn/graphql-tutorials/manifests/hasura-backend.yaml
@@ -15,6 +15,7 @@ spec:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
+      maxSurge: 100%
   template:
     metadata:
       labels:
