--- a/community/learn/graphql-tutorials/manifests/vue-apollo.yaml
+++ b/community/learn/graphql-tutorials/manifests/vue-apollo.yaml
@@ -28,6 +28,10 @@ spec:
         ports:
         - containerPort: 8080
           protocol: TCP
+        readinessProbe:
+          httpGet:
+            path: /graphql/vue/introduction
+            port: 8080
 ---
 apiVersion: v1
 kind: Service
