check if collection present in allowlist before dropping

--- a/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
+++ b/server/tests-py/queries/graphql_query/allowlist/query_non_allowlist.yaml
@@ -8,7 +8,7 @@ response:
   - extensions:
       path: "$"
       code: validation-failed
-    message: query is not in allowlist
+    message: query is not allowed
 query:
   query: |
     query {
