--- a/community/learn/graphql-tutorials/manifests/auth-webhook.yaml
+++ b/community/learn/graphql-tutorials/manifests/auth-webhook.yaml
@@ -15,6 +15,7 @@ spec:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 0
+      maxSurge: 100%
   template:
     metadata:
       labels:
@@ -26,7 +27,7 @@ spec:
         name: auth-webhook
         env:
         - name: PORT
-          value: 8080
+          value: "8080"
         - name: CUSTOM_JWT_SECRET
           valueFrom:
             secretKeyRef:
