change create_event_trigger_query type

--- a/server/tests-py/queries/event_triggers/create-delete/create_and_reset.yaml
+++ b/server/tests-py/queries/event_triggers/create-delete/create_and_reset.yaml
@@ -15,12 +15,12 @@ query:
         schema: hge_tests
         name: test_t1
       insert:
-        columns: "*"
+        payload: "*"
       update:
         columns: "*"
+        payload: "*"
       delete:
-        columns: "*"
+        payload: "*"
       webhook: http://127.0.0.1:5592
-
   - type: clear_metadata
     args: {}
