--- a/server/tests-py/queries/event_triggers/headers/setup.yaml
+++ b/server/tests-py/queries/event_triggers/headers/setup.yaml
@@ -18,11 +18,12 @@ args:
       schema: hge_tests
       name: test_t1
     insert:
-      columns: "*"
+      payload: "*"
     update:
       columns: "*"
+      payload: "*"
     delete:
-      columns: "*"
+      payload: "*"
     webhook: http://127.0.0.1:5592
     headers:
     - name: "X-Header-From-Value"
