--- a/server/tests-py/queries/event_triggers/create-delete/create_and_delete.yaml
+++ b/server/tests-py/queries/event_triggers/create-delete/create_and_delete.yaml
@@ -16,11 +16,12 @@ query:
         schema: hge_tests
         name: test_t1
       insert:
-        columns: "*"
+        payload: "*"
       update:
         columns: "*"
+        payload: "*"
       delete:
-        columns: "*"
+        payload: "*"
       webhook: http://127.0.0.1:5592
 
   - type: delete_event_trigger
