--- a/server/tests-py/queries/event_triggers/listen_cols/setup.yaml
+++ b/server/tests-py/queries/event_triggers/listen_cols/setup.yaml
@@ -18,9 +18,10 @@ args:
       schema: hge_tests
       name: test_t1
     insert:
-      columns: "*"
+      payload: "*"
     update:
+      payload: "*"
       columns: []
     delete:
-      columns: "*"
+      payload: "*"
     webhook: http://127.0.0.1:5592
