--- a/server/tests-py/queries/event_triggers/retry_conf/setup.yaml
+++ b/server/tests-py/queries/event_triggers/retry_conf/setup.yaml
@@ -34,11 +34,12 @@ args:
       schema: hge_tests
       name: test_t1
     insert:
-      columns: "*"
+      payload: "*"
     update:
-      columns: "*"
+      payload: "*"
+      listen_columns: "*"
     delete:
-      columns: "*"
+      payload: "*"
     webhook: http://127.0.0.1:5592/fail
     retry_conf:
       num_retries: 4
@@ -50,11 +51,12 @@ args:
       schema: hge_tests
       name: test_t2
     insert:
-      columns: "*"
+      payload: "*"
     update:
+      payload: "*"
       columns: "*"
     delete:
-      columns: "*"
+      payload: "*"
     webhook: http://127.0.0.1:5592/timeout_short
     retry_conf:
       num_retries: 2
@@ -67,11 +69,12 @@ args:
       schema: hge_tests
       name: test_t3
     insert:
-      columns: "*"
+      payload: "*"
     update:
+      payload: "*"
       columns: "*"
     delete:
-      columns: "*"
+      payload: "*"
     webhook: http://127.0.0.1:5592/timeout_long
     retry_conf:
       num_retries: 0
