--- a/server/tests-py/queries/event_triggers/update_query/create-setup.yaml
+++ b/server/tests-py/queries/event_triggers/update_query/create-setup.yaml
@@ -18,7 +18,8 @@ args:
       schema: hge_tests
       name: test_t1
     insert:
-      columns: "*"
+      payload: "*"
     update:
       columns: ["c2"]
+      payload: "*"
     webhook: http://127.0.0.1:5592
