--- a/server/tests-py/queries/event_triggers/webhook_env/setup.yaml
+++ b/server/tests-py/queries/event_triggers/webhook_env/setup.yaml
@@ -18,9 +18,10 @@ args:
       schema: hge_tests
       name: test_t1
     insert:
-      columns: "*"
+      payload: "*"
     update:
+      payload: "*"
       columns: "*"
     delete:
-      columns: "*"
+      payload: "*"
     webhook_from_env: WEBHOOK_FROM_ENV
