--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,7 +177,7 @@ jobs:
           apt-get -y update
           apt-get -y install postgresql-client-11
     - run:
-        name: Build the server
+        name: Build the binary
         working_directory: ./server
         command: |
           # for PRs non-optimized build, else optimized build
@@ -188,6 +188,16 @@ jobs:
             echo "Non-release branch, non-optimized build with coverage"
             BUILD_FLAGS="--fast --coverage" make ci-binary
           fi
+    - run:
+        name: Build the docker image
+        working_directory: ./server
+        command: |
+          # copy console assets to the rootfs - packaging/build/rootfs
+          export ROOTFS=packaging/build/rootfs
+          mkdir -p "$ROOTFS/srv"
+          cp -r /build/_console_output/assets "$ROOTFS/srv/console-assets"
+
+          # build and save the image
           make ci-image
           make ci-save-image
     - save_cache:
@@ -334,7 +344,7 @@ jobs:
   # build console assets
   build_console:
     docker:
-    - image: hasura/graphql-engine-console-builder:v0.3
+    - image: hasura/graphql-engine-console-builder:20190515
     working_directory: ~/graphql-engine
     steps:
     - attach_workspace:
@@ -361,6 +371,20 @@ jobs:
         command: |
           make build
           make ci-copy-assets
+    - run:
+        name: setup assets directory
+        command: |
+          export ASSETS_PATH=/build/_console_output/assets
+          mkdir -p "$ASSETS_PATH"
+          gsutil -m cp -r gs://graphql-engine-cdn.hasura.io/console/assets/common "$ASSETS_PATH"
+          # gsutil decompresses files automatically, need to compress font-awesome again
+          # (see https://github.com/GoogleCloudPlatform/gsutil/issues/515)
+          mv "$ASSETS_PATH/common/css/font-awesome.min.css.gz" "$ASSETS_PATH/common/css/font-awesome.min.css"
+          gzip "$ASSETS_PATH/common/css/font-awesome.min.css"
+          # copy versioned assets and compress them
+          mkdir -p "$ASSETS_PATH/versioned"
+          cp "$ASSETS_PATH"/../{main.js,main.css,vendor.js} "$ASSETS_PATH/versioned/"
+          gzip -r "$ASSETS_PATH/versioned/"
     - store_artifacts:
         path: /build/_console_output
         destination: console
