--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -27,11 +27,6 @@ flag profile
   default: False
   manual: True
 
-flag local-console
-  description: embeds resources needed by console and serves them at /static/
-  default: False
-  manual: True
-
 library
   hs-source-dirs:      src-lib
                      , src-exec
@@ -146,6 +141,10 @@ library
                      -- metrics in multiplexed subs
                      , ekg-core
 
+                     -- serve static files
+                     , filepath >= 1.4
+                     , mime-types >= 0.1
+
   exposed-modules:     Hasura.Prelude
                      , Hasura.Logging
                      , Hasura.EncJSON
@@ -166,6 +165,7 @@ library
                      , Hasura.Server.Telemetry
                      , Hasura.Server.SchemaUpdate
                      , Hasura.Server.PGDump
+
                      , Hasura.RQL.Types
                      , Hasura.RQL.Instances
                      , Hasura.RQL.Types.SchemaCache
@@ -294,9 +294,7 @@ library
   if flag(profile)
     ghc-prof-options: -rtsopts -fprof-auto -fno-prof-count-entries
   if flag(developer)
-    cpp-options: -DDeveloperAPIs -DLocalConsole
-  if flag(local-console)
-    cpp-options: -DLocalConsole
+    cpp-options: -DDeveloperAPIs
 
   ghc-options: -O2
                -Wall
