--- a/install-manifests/kubernetes/deployment.yaml
+++ b/install-manifests/kubernetes/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: hasura
     spec:
       containers:
-      - image: hasura/graphql-engine:v1.0.0-alpha45
+      - image: hasura/graphql-engine:v1.0.0-beta.01
         imagePullPolicy: IfNotPresent
         name: hasura
         env:
