--- a/community/sample-apps/tic-tac-toe-react/client/package.json
+++ b/community/sample-apps/tic-tac-toe-react/client/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.3.1",
-    "apollo-link-ws": "^1.0.17",
-    "bootstrap": "^4.3.1",
-    "graphql": "^14.2.1",
-    "random-words": "^1.1.0",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.5",
-    "react-bootstrap": "^1.0.0-beta.8",
-    "react-dom": "^16.8.6",
+    "apollo-boost": "0.3.1",
+    "apollo-link-ws": "1.0.17",
+    "bootstrap": "4.3.1",
+    "graphql": "14.2.1",
+    "random-words": "1.1.0",
+    "react": "16.8.6",
+    "react-apollo": "2.5.5",
+    "react-bootstrap": "1.0.0-beta.8",
+    "react-dom": "16.8.6",
     "react-scripts": "3.0.0",
-    "subscriptions-transport-ws": "^0.9.16"
+    "subscriptions-transport-ws": "0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
