--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -356,7 +356,13 @@ executable graphql-engine
   if flag(developer)
     ghc-prof-options: -rtsopts -fprof-auto -fno-prof-count-entries
 
-  ghc-options: -O2 -Wall -threaded
+  ghc-options: -O2
+               -Wall
+               -Wcompat
+               -Wincomplete-record-updates
+               -Wincomplete-uni-patterns
+               -Wredundant-constraints
+               -threaded -rtsopts
 
 test-suite graphql-engine-test
   type:               exitcode-stdio-1.0
