fix response for remote schema queries over ws (fix #2246)
  remote schema queries over websocket would return nested data key in
  payload

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -40,6 +40,7 @@ library
                      , mtl
                      , aeson
                      , aeson-casing
+                     , lens-aeson
                      , unordered-containers
                      , template-haskell
                      , hashable
