--- a/community/learn/graphql-tutorials/tutorials/android-apollo/app-final/app/build.gradle
+++ b/community/learn/graphql-tutorials/tutorials/android-apollo/app-final/app/build.gradle
@@ -12,13 +12,13 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.mk.todo.Todo"
+        applicationId "com.hasura.todo.Todo"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "mk"]
+        manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "hasura"]
     }
     buildTypes {
         release {
