improve logging sql
  - log generated sql for cached plans as well
  - log the graphql query as well in the `query-log`
  - log in websocket handler as well

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -242,6 +242,7 @@ library
                      , Hasura.GraphQL.RemoteServer
                      , Hasura.GraphQL.Context
                      , Hasura.GraphQL.Resolve.ContextTypes
+                     , Hasura.GraphQL.Logging
 
                      , Hasura.Events.Lib
                      , Hasura.Events.HTTP
