--- a/community/learn/graphql-tutorials/manifests/caddy-config.yaml
+++ b/community/learn/graphql-tutorials/manifests/caddy-config.yaml
@@ -7,23 +7,23 @@ data:
   Caddyfile: |
     learn.hasura.io {
       redir 301 {
-        /graphql/react/boilerplate.zip https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/react-boilerplate/boilerplate.zip
+        /graphql/react/boilerplate.zip https://graphql-engine-cdn.hasura.io/learn-hasura/boilerplates/react/react-boilerplate.zip
       }
 
       redir 301 {
-        /graphql/react-native/boilerplate.zip https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/react-native-boilerplate/boilerplate.zip
+        /graphql/react-native/boilerplate.zip https://graphql-engine-cdn.hasura.io/learn-hasura/boilerplates/react-native/react-native-boilerplate.zip
       }
 
       redir 301 {
-        /graphql/vue/boilerplate.zip https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/vue-boilerplate/boilerplate.zip
+        /graphql/vue/boilerplate.zip https://graphql-engine-cdn.hasura.io/learn-hasura/boilerplates/vue/vue-boilerplate.zip
       }
 
       redir 301 {
-        /graphql/ios/boilerplate.zip https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/ios-boilerplate/boilerplate.zip
+        /graphql/ios/boilerplate.zip https://graphql-engine-cdn.hasura.io/learn-hasura/boilerplates/ios/ios-boilerplate.zip
       }
 
       redir 301 {
-        /graphql/android/boilerplate.zip https://storage.googleapis.com/graphql-engine-cdn.hasura.io/learn-hasura/android-boilerplate/boilerplate.zip
+        /graphql/android/boilerplate.zip https://graphql-engine-cdn.hasura.io/learn-hasura/boilerplates/android/android-boilerplate.zip
       }
 
       redir 301 {
@@ -69,6 +69,11 @@ data:
         websocket
       }
 
+      proxy /graphql/v1/graphql hasura/v1/graphql {
+        without /graphql/v1/graphql
+        websocket
+      }
+
       proxy /graphql/v1/query hasura/v1/query {
         without /graphql/v1/query
       }
@@ -93,7 +98,7 @@ data:
 
       proxy /graphql/android android-apollo
       
-      proxy /graphql hasura/v1alpha1/graphql {
+      proxy /graphql hasura/v1/graphql {
         without /graphql
         websocket
       }
