allow functions to use session info through an argument, close #2322

--- a/server/tests-py/queries/v1/metadata/export_metadata.yaml
+++ b/server/tests-py/queries/v1/metadata/export_metadata.yaml
@@ -34,7 +34,9 @@ response:
   query_collections: []
   allowlist: []
   functions:
-  - search_articles
+  - function: search_articles
+    session_variable_argument: null
+  version: 2
 
 query:
   type: export_metadata
