--- a/server/tests-py/queries/v1/metadata/clear_metadata.yaml
+++ b/server/tests-py/queries/v1/metadata/clear_metadata.yaml
@@ -17,6 +17,7 @@
     query_templates: []
     tables: []
     remote_schemas: []
+    version: 2
   query:
     type: export_metadata
     args: {}
