--- a/server/tests-py/queries/graphql_query/functions/setup.yaml
+++ b/server/tests-py/queries/graphql_query/functions/setup.yaml
@@ -71,5 +71,28 @@ args:
     name: get_test
     schema: public
 
+# V2 Functions
+- type: run_sql
+  args:
+    sql: |
+      CREATE TABLE text_result(
+        result text
+      );
 
+      CREATE FUNCTION get_session_var(hasura_session json, session_var text)
+      RETURNS SETOF text_result AS $$
+          SELECT q.* FROM (VALUES (hasura_session ->> session_var)) q
+      $$ LANGUAGE sql STABLE;
 
+- type: track_table
+  args:
+    name: text_result
+    schema: public
+
+- type: track_function
+  version: 2
+  args:
+    function:
+      schema: public
+      name: get_session_var
+    session_variable_argument: hasura_session
