--- a/server/tests-py/queries/graphql_query/functions/teardown.yaml
+++ b/server/tests-py/queries/graphql_query/functions/teardown.yaml
@@ -6,4 +6,5 @@ args:
     sql: |
       DROP TABLE post cascade;
       DROP TABLE test cascade;
+      DROP TABLE text_result cascade;
     cascade: true
