forward set-cookie headers from remote servers (fix #1654) (#2305)

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -155,6 +155,7 @@ library
                      , Hasura.Server.Auth
                      , Hasura.Server.Auth.JWT
                      , Hasura.Server.Init
+                     , Hasura.Server.Context
                      , Hasura.Server.Middleware
                      , Hasura.Server.Logging
                      , Hasura.Server.Query
