'config' field in v2 functions metadata
-> Session variable argument is in config json object

--- a/server/tests-py/queries/graphql_query/functions/setup.yaml
+++ b/server/tests-py/queries/graphql_query/functions/setup.yaml
@@ -95,4 +95,5 @@ args:
     function:
       schema: public
       name: get_session_var
-    session_variable_argument: hasura_session
+    config:
+      session_variable_argument: hasura_session
