--- a/server/tests-py/queries/v1/metadata/export_metadata.yaml
+++ b/server/tests-py/queries/v1/metadata/export_metadata.yaml
@@ -35,7 +35,7 @@ response:
   allowlist: []
   functions:
   - function: search_articles
-    session_variable_argument: null
+    config: null
   version: 2
 
 query:
