--- a/console/package.json
+++ b/console/package.json
@@ -78,6 +78,7 @@
     "query-string": "^6.1.0",
     "react": "16.8.2",
     "react-ace": "^6.1.1",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^0.32.1",
     "react-copy-to-clipboard": "^5.0.0",
     "react-dom": "16.8.2",
