--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -205,6 +205,7 @@ library
                      , Hasura.RQL.DDL.QueryCollection
                      , Hasura.RQL.DDL.Remote.Input
                      , Hasura.RQL.DDL.Remote.Validate
+                     , Hasura.RQL.DDL.Remote.Types
                      , Hasura.RQL.DML.Delete
                      , Hasura.RQL.DML.Internal
                      , Hasura.RQL.DML.Insert
