add x-hasura-role in session variable test case headers

--- a/server/tests-py/queries/graphql_query/functions/query_get_session_var.yaml
+++ b/server/tests-py/queries/graphql_query/functions/query_get_session_var.yaml
@@ -3,6 +3,7 @@ url: /v1/graphql
 status: 200
 headers:
   X-Hasura-Test: test value
+  X-Hasura-Role: admin
 response:
   data:
     get_session_var:
