fix drop function syntax in test case to support older postgres version

--- a/server/tests-py/queries/graphql_query/functions/track_function_v2_errors.yaml
+++ b/server/tests-py/queries/graphql_query/functions/track_function_v2_errors.yaml
@@ -47,5 +47,5 @@
     type: run_sql
     args:
       sql: |
-        DROP FUNCTION get_session_var_value;
+        DROP FUNCTION get_session_var_value(json, text);
       cascade: true
