--- a/server/tests-py/queries/remote_schemas/setup_mixed.yaml
+++ b/server/tests-py/queries/remote_schemas/setup_mixed.yaml
@@ -36,6 +36,6 @@ args:
   args:
     name: my-remote-schema
     definition:
-      url: http://localhost:5000/messages-graphql
+      url: http://localhost:4000
       forward_client_headers: false
 
