--- a/server/tests-py/queries/remote_schemas/remote_relationships/teardown.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/teardown.yaml
@@ -3,7 +3,7 @@ args:
 - type: run_sql
   args:
     sql: |
-      delete from hdb_catalog.hdb_remote_relationship where name = 'message' and table_name = 'profiles';
+      delete from hdb_catalog.hdb_remote_relationship;
       drop table profiles
 - type: remove_remote_schema
   args:
