--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -141,6 +141,9 @@ library
                      -- metrics in multiplexed subs
                      , ekg-core
 
+                     -- metrics for CI integration
+                     , ci-info
+
                      -- serve static files
                      , filepath >= 1.4
                      , mime-types >= 0.1
