add api to get server config details (close #1831); add jwt-analyzer (close #1369) (#1925)

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -166,6 +166,7 @@ library
                      , Hasura.Server.Telemetry
                      , Hasura.Server.SchemaUpdate
                      , Hasura.Server.PGDump
+                     , Hasura.Server.Config
 
                      , Hasura.RQL.Types
                      , Hasura.RQL.Instances
