--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_multiple_fields.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_multiple_fields.yaml
@@ -1,12 +1,16 @@
 type: create_remote_relationship
 args:
-  name: messagesNestedArr
+  name: messagesMultiFields
   table: profiles
   hasura_fields:
+    - id
     - name
   remote_schema: my-remote-schema
   remote_field: messages
   remote_arguments:
+    where:
+      name:
+        eq: "$name"
     includes:
-      name: ["$name"]
-        
+      id: ["$id"]
+
