add execution tests

--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_array.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_array.yaml
@@ -3,10 +3,10 @@ args:
   name: messagesNestedArr
   table: profiles
   hasura_fields:
-    - id
+    - name
   remote_schema: my-remote-schema
   remote_field:
     messages:
       arguments:
         includes:
-          id: ["$id"]
+          name: ["$name"]
