--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_with_interface.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_with_interface.yaml
@@ -1,11 +1,11 @@
 type: create_remote_relationship
 args:
-  name: messageBasic
+  name: communicationsInterface
   table: profiles
   hasura_fields:
     - id
   remote_schema: my-remote-schema
   remote_field:
-    message:
+    communications:
       arguments:
-        id: "$id"
+          id: $id
