--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_multiple_fields.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_multiple_fields.yaml
@@ -1,11 +1,16 @@
 type: create_remote_relationship
 args:
-  name: messageBasic
+  name: messagesMultiFields
   table: profiles
   hasura_fields:
     - id
+    - name
   remote_schema: my-remote-schema
   remote_field:
-    message:
+    messages:
       arguments:
-        id: "$id"
+        where:
+          name:
+            eq: "$name"
+        includes:
+          id: ["$id"]
