--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_nested_args.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_nested_args.yaml
@@ -1,15 +1,13 @@
-type: bulk
+type: create_remote_relationship
 args:
-  - type: create_remote_relationship
-    args:
-      name: messages
-      table: profiles
-      hasura_fields:
-        - id
-      remote_schema: my-remote-schema
-      remote_field:
-        messages:
-          arguments:
-            where:
-              id:
-                eq: "$id"
+  name: messagesNestedArgs
+  table: profiles
+  hasura_fields:
+    - id
+  remote_schema: my-remote-schema
+  remote_field:
+    messages:
+      arguments:
+        where:
+          id:
+            eq: "$id"
