Stripping argument fields out

--- a/server/tests-py/queries/remote_schemas/remote_relationships/select_remote_metadata.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/select_remote_metadata.yaml
@@ -8,11 +8,7 @@ response:
       fields:
       - args: []
         name: id
-      - args:
-         - name: id
-           type:
-             name: null
-           defaultValue: null
+      - args: []
         name: message
       - args: []
         name: name
