Update yaml file format for remote rels
Running http server on 127.0.0.1:5000
================================================= test session starts =================================================
platform linux -- Python 3.5.3, pytest-4.6.2, py-1.8.0, pluggy-0.12.0 -- /usr/bin/python3
cachedir: .pytest_cache
rootdir: /home/chris/Work/hasura/graphql-engine/server/tests-py, inifile: pytest.ini
plugins: forked-1.0.2, xdist-1.28.0
[gw0] linux Python 3.5.3 cwd: /home/chris/Work/hasura/graphql-engine/server/tests-py
[gw0] Python 3.5.3 (default, Sep 27 2018, 17:25:39)  -- [GCC 6.3.0 20170516]
gw0 [6]
scheduling tests via LoadFileScheduling

test_remotes.py::TestTopLevelMixedFields::test_create_valid[http]
[gw0] [ 16%] PASSED test_remotes.py::TestTopLevelMixedFields::test_create_valid[http]
test_remotes.py::TestTopLevelMixedFields::test_create_valid[websocket]
[gw0] [ 33%] PASSED test_remotes.py::TestTopLevelMixedFields::test_create_valid[websocket]
test_remotes.py::TestTopLevelMixedFields::test_generation[http]
[gw0] [ 50%] PASSED test_remotes.py::TestTopLevelMixedFields::test_generation[http]
test_remotes.py::TestTopLevelMixedFields::test_generation[websocket]
[gw0] [ 66%] PASSED test_remotes.py::TestTopLevelMixedFields::test_generation[websocket]
test_remotes.py::TestTopLevelMixedFields::test_create_invalid[http]
[gw0] [ 83%] PASSED test_remotes.py::TestTopLevelMixedFields::test_create_invalid[http]
test_remotes.py::TestTopLevelMixedFields::test_create_invalid[websocket]
[gw0] [100%] PASSED test_remotes.py::TestTopLevelMixedFields::test_create_invalid[websocket]

================================================== warnings summary ===================================================
/usr/local/lib/python3.5/dist-packages/sqlalchemy/util/langhelpers.py:225
  /usr/local/lib/python3.5/dist-packages/sqlalchemy/util/langhelpers.py:225: SADeprecationWarning: The 'postgres' dialect name has been renamed to 'postgresql'
    loader = self.auto_fn(name)

-- Docs: https://docs.pyte

--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_invalid_remote_rel_array.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_invalid_remote_rel_array.yaml
@@ -5,8 +5,9 @@ args:
   hasura_fields:
     - id
   remote_schema: my-remote-schema
-  remote_field: messages
-  remote_arguments:
-    where:
-      id:
-        eq: ["$id"]
+  remote_field:
+    messages:
+      arguments:
+        where:
+          id:
+            eq: ["$id"]
