--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_basic.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_remote_rel_basic.yaml
@@ -5,6 +5,7 @@ args:
   hasura_fields:
     - id
   remote_schema: my-remote-schema
-  remote_field: message
-  remote_arguments:
+  remote_field:
+    message:
+      arguments:
         id: "$id"
