--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_invalid_remote_rel_nested_args.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_invalid_remote_rel_nested_args.yaml
@@ -5,8 +5,9 @@ args:
   hasura_fields:
     - id
   remote_schema: my-remote-schema
-  remote_field: messages
-  remote_arguments:
-    where:
-      id:
-        xyz: "$id"
+  remote_field:
+    messages:
+      arguments:
+        where:
+          id:
+            xyz: "$id"
