--- a/server/tests-py/queries/remote_schemas/remote_relationships/setup_invalid_remote_rel_variable.yaml
+++ b/server/tests-py/queries/remote_schemas/remote_relationships/setup_invalid_remote_rel_variable.yaml
@@ -6,6 +6,7 @@ args:
     - id
     - name
   remote_schema: my-remote-schema
-  remote_field: message
-  remote_arguments:
-    id: "$id_wrong"
+  remote_field:
+    message:
+      arguments:
+        id: "$id_wrong"
